fix: paragraph spacing

--- a/templates/stylesheet.css
+++ b/templates/stylesheet.css
@@ -241,7 +241,7 @@ p {
   margin: 0;
 
   &:not(:last-child)  {
-    margin-bottom: var(--spacing-large);
+    margin-bottom: var(--spacing-huge);
   }
 }
 
